Dev Map type support (#63)
* Use TS Record for map type
* Use Partial Record for map with enum key
* Render rust map
* Add integration and client test for map types
* Fix maven central badge and ci warning